--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 APP_JWT_SECRET=wmd66G0eFODn
-AWS_ACCESS_KEY_ID=AKIAYAVS7THAIQF6DCPL
+AWS_ACCESS_KEY_ID=
 AWS_REGION=ap-south-1b
-AWS_SECRET_ACCESS_KEY=iXM0ENdi7s7xOWjYZGbYg9AGXGxHv5+lx1FLyCUx
-DB_HOST=tirur-prod.cmwawuurnnf9.ap-south-1.rds.amazonaws.com
+AWS_SECRET_ACCESS_KEY=
+DB_HOST=
 DB_NAME=postgres
-DB_PASSWORD=ekrfoods123
-DB_USERNAME=postgres
-JWT_SECRET=thedopesecret
+DB_PASSWORD=
+DB_USERNAME=
+JWT_SECRET=
 MODE=PROD
 PORT=5001
 REGION=ap-south-1b
